fix puppeteer options

--- a/nodejs/mermaid/cli/versions/0.5/puppeteer-config.json
+++ b/nodejs/mermaid/cli/versions/0.5/puppeteer-config.json
@@ -1,3 +1,4 @@
 {
-  "args": ["--no-sandbox"]
+  "executablePath": "google-chrome-unstable",
+  "args": ["--no-sandbox", "--disable-setuid-sandbox", "--disable-dev-shm-usage"]
 }
