change mermaid default file format

--- a/nodejs/mermaid/editor/versions/8.0/Dockerfile
+++ b/nodejs/mermaid/editor/versions/8.0/Dockerfile
@@ -1,5 +1,6 @@
 # Mermaid Editor v8.0
 # docker run --rm -p 8080:80 supinf/mermaid-editor:8.0
+# docker run --rm -p 8080:80 -v $(pwd)/code:/usr/share/nginx/html/code supinf/mermaid-editor:8.0
 
 FROM node:11.9.0-alpine AS build-env
 
@@ -25,3 +26,4 @@ RUN yarn release
 
 FROM nginx:1.15.8-alpine
 COPY --from=build-env /app/docs /usr/share/nginx/html
+ADD default.mmd /usr/share/nginx/html/code/
