revise haskell dockerfiles & update shellcheck version

--- a/haskell/hadolint/versions/1.16/Dockerfile
+++ b/haskell/hadolint/versions/1.16/Dockerfile
@@ -1,14 +1,13 @@
 # Haskell Dockerfile Linter v1.16
 # @see https://github.com/hadolint/hadolint
 #
-# docker run --rm -it -v $(pwd):/work supinf/hadolint:1.16
-# docker run --rm -it -v $(pwd):/work -e DOCKERFILE_NAME=Dockerfile.prod supinf/hadolint:1.16
+# docker run --rm -v $(pwd):/work supinf/hadolint:1.16
+# docker run --rm -v $(pwd):/work -e DOCKERFILE_NAME=Dockerfile.prod supinf/hadolint:1.16
 
 FROM alpine:3.9
 
-ENV HADOLINT_VERSION=v1.16.0 \
-    DOCKERFILE_NAME=Dockerfile \
-    IGNORE_PATH=
+ENV HADOLINT_VERSION='v1.16.0' \
+    DOCKERFILE_NAME='Dockerfile'
 
 RUN apk --no-cache --virtual=build-deps add curl \
     && curl --location --silent -o /usr/bin/hadolint \
@@ -18,6 +17,6 @@ RUN apk --no-cache --virtual=build-deps add curl \
 
 WORKDIR /work
 
-ADD entrypoint.sh /
+COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
