--- a/java/graalvm/maven/versions/3.6/Dockerfile
+++ b/java/graalvm/maven/versions/3.6/Dockerfile
@@ -1,4 +1,4 @@
-# Maven v3.6 with GraalVM
+# GraalVM v1.0 with Maven v3.6
 #
 # docker run --rm -v "$(pwd)":/work -v "${HOME}/.m2":/root/.m2 \
 #   supinf/maven:3.6-graalvm \
@@ -12,46 +12,14 @@
 # docker build -f src/main/docker/Dockerfile -t quarkus/sample .
 # docker run --rm -p 8080:8080 quarkus/sample
 
-FROM debian:stretch-slim
+FROM supinf/graalvm:1.0
 
-# Install GraalVM & Java8
-# @see https://www.graalvm.org/docs/why-graal/
-ENV GRAAL_VERSION=1.0.0-rc13 \
-    LANG=en_US.UTF-8
-
-RUN apt-get update \
-    && apt-get install -y "wget=1.18-5+deb9u2" \
-    && repo=https://github.com/oracle/graal/releases/download \
-    && wget -qO- "${repo}/vm-${GRAAL_VERSION}/graalvm-ce-${GRAAL_VERSION}-linux-amd64.tar.gz" \
-       | tar xvz -C /opt/ \
-    && rm -rf "/opt/graalvm-ce-${GRAAL_VERSION}/sample" \
-        "/opt/graalvm-ce-${GRAAL_VERSION}/man" \
-        "/opt/graalvm-ce-${GRAAL_VERSION}/src.zip" \
-        "/opt/graalvm-ce-${GRAAL_VERSION}/jre/tools" \
-        "/opt/graalvm-ce-${GRAAL_VERSION}/jre/languages" \
-    && rm -rf /var/cache/* /var/lib/apt/lists/* /var/log/apt/*
-
-ENV JAVA_HOME="/opt/graalvm-ce-${GRAAL_VERSION}/" \
-    GRAALVM_HOME="/opt/graalvm-ce-${GRAAL_VERSION}" \
-    PATH="${JAVA_HOME}bin:${PATH}"
-
-RUN mkdir -p "/usr/java" \
-    && ln -sfT "${JAVA_HOME}" /usr/java/default \
-    && ln -sfT "${JAVA_HOME}" /usr/java/latest \
-    && for bin in "${JAVA_HOME}bin/"*; do \
-        base="$(basename "${bin}")"; \
-        [ ! -e "/usr/bin/${base}" ]; \
-        update-alternatives --install "/usr/bin/${base}" "${base}" "${bin}" 20000; \
-    done
-
-# Install Maven
 ENV MAVEN_VERSION=3.6.0 \
     MAVEN_HOME=/usr/share/maven \
     MAVEN_CONFIG=/root/.m2 \
     MAVEN_OPTS="-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
 
-RUN apt-get update \
-    && apt-get install -y "curl=7.52.1-5+deb9u9" \
+RUN apt-get update && apt-get install -y "curl=7.52.1-5+deb9u9" \
     && mkdir -p /usr/share/maven /usr/share/maven/ref \
     && curl -fsSL -o /tmp/apache-maven.tar.gz \
        "https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz" \
