revise graalvm doc

--- a/java/graalvm/maven/versions/3.6/Dockerfile
+++ b/java/graalvm/maven/versions/3.6/Dockerfile
@@ -1,16 +1,18 @@
 # GraalVM v1.0 with Maven v3.6
 #
 # docker run --rm -v "$(pwd)":/work -v "${HOME}/.m2":/root/.m2 \
-#   supinf/graalvm:1.0-maven3.6 \
+#     supinf/graalvm:1.0-maven3.6 \
 #     io.quarkus:quarkus-maven-plugin:0.11.0:create \
-#       -DprojectGroupId=org.acme \
-#       -DprojectArtifactId=getting-started \
-#       -DclassName="org.acme.quickstart.GreetingResource" \
-#       -Dpath="/hello"
+#        -DprojectGroupId=org.acme \
+#        -DprojectArtifactId=sample \
+#        -DclassName="org.acme.quickstart.GreetingResource" \
+#        -Dpath="/hello"
+# cd sample
 # docker run --rm -v "$(pwd)":/work -v "${HOME}/.m2":/root/.m2 \
-#   supinf/graalvm:1.0-maven3.6 package -Pnative
+#     supinf/graalvm:1.0-maven3.6 package -Pnative
 # docker build -f src/main/docker/Dockerfile -t quarkus/sample .
 # docker run --rm -p 8080:8080 quarkus/sample
+# open http://localhost:8080/
 
 FROM supinf/graalvm:1.0
 
