--- a/python/awscli/versions/2.0/Dockerfile
+++ b/python/awscli/versions/2.0/Dockerfile
@@ -1,10 +1,10 @@
 # AWS-CLI v2.0
 # docker run --rm supinf/awscli:2.0 --version
 # docker run --rm -v $HOME/.aws:/root/.aws supinf/awscli:2.0 sts get-caller-identity
-# docker run --rm -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION supinf/awscli:2.0 sts get-caller-identit
+# docker run --rm -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION supinf/awscli:2.0 sts get-caller-identity
 
 FROM alpine:3.12 AS build
-ENV AWSCLI_VERSION="2.0.40"
+ENV AWSCLI_VERSION="2.0.44"
 RUN apk --no-cache add git build-base libffi-dev openssl-dev python3-dev py3-pip
 RUN git clone --depth=1 -b "${AWSCLI_VERSION}" https://github.com/aws/aws-cli.git /opt/aws
 WORKDIR /opt/aws
