--- a/nodejs/gulp/versions/3.9-es/package.json
+++ b/nodejs/gulp/versions/3.9-es/package.json
@@ -31,6 +31,8 @@
     "gulp-uglify-es": "^1.0.4",
     "through2": "^2.0.3",
     "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-vue": "^2.0.2"
+    "eslint-plugin-vue": "^2.0.2",
+    "vinyl-source-stream": "^2.0.0",
+    "gulp-streamify": "^1.0.2"
   }
 }
