--- a/golang/swagger/versions/0.x/Dockerfile
+++ b/golang/swagger/versions/0.x/Dockerfile
@@ -1,10 +1,9 @@
-# go-swagger
-#
-# docker run --rm -v $(pwd):/go/src supinf/go-swagger validate ./swagger.yml
-# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-swagger generate server -A sample -f ./swagger.yml
-# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project supinf/go-swagger generate client -A sample -f ./swagger.yml
+# go-swagger v0.25.0
+# docker run --rm -v $(pwd):/go/src ghcr.io/supinf/go-swagger:0.25 validate ./swagger.yml
+# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project ghcr.io/supinf/go-swagger:0.25 generate server -A sample -f ./swagger.yml
+# docker run --rm -v $GOPATH/src:/go/src -w /go/src/github.com/your-account/project ghcr.io/supinf/go-swagger:0.25 generate client -A sample -f ./swagger.yml
 
-FROM golang:1.15.2-alpine3.12 AS build
+FROM golang:1.15.6-alpine3.12 AS build
 RUN apk --no-cache add bash g++ openssl git
 RUN go get -u github.com/mitchellh/gox
 
