--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,3 +79,17 @@ jobs:
         echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
         docker build -t "${IMAGE_NAME}" golang/swagger/versions/0.x/
         docker push "${IMAGE_NAME}"
+
+  cfn-lint:
+    name: CFn Lint
+    if: github.event_name == 'push' && contains(github.ref, 'gh-cfn-lint-v0.44.')
+    runs-on: ubuntu-18.04
+    env:
+      IMAGE_NAME: ghcr.io/supinf/cfn-lint:0.44
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build & Push
+      run: |
+        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+        docker build -t "${IMAGE_NAME}" python/cfn-lint/versions/0.44/
+        docker push "${IMAGE_NAME}"
