--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,3 +93,17 @@ jobs:
         echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
         docker build -t "${IMAGE_NAME}" python/cfn-lint/versions/0.44/
         docker push "${IMAGE_NAME}"
+
+  test-http:
+    name: Test HTTP requests
+    if: github.event_name == 'push' && contains(github.ref, 'gh-test-http-v1.2')
+    runs-on: ubuntu-18.04
+    env:
+      IMAGE_NAME: ghcr.io/supinf/test-http:1.2
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build & Push
+      run: |
+        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+        docker build -t "${IMAGE_NAME}" python/test-http/versions/1.2/
+        docker push "${IMAGE_NAME}"
