--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,3 +121,17 @@ jobs:
         echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
         docker build -t "${IMAGE_NAME}" python/test-http/versions/1.2/
         docker push "${IMAGE_NAME}"
+
+  aws-x-ray:
+    name: Test HTTP requests
+    if: github.event_name == 'push' && contains(github.ref, 'gh-x-ray-3.2')
+    runs-on: ubuntu-18.04
+    env:
+      IMAGE_NAME: ghcr.io/supinf/x-ray:3.2
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build & Push
+      run: |
+        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+        docker build -t "${IMAGE_NAME}" golang/x-ray/versions/3.2/
+        docker push "${IMAGE_NAME}"
