--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,18 +52,18 @@ jobs:
         docker build -t "${IMAGE_NAME}" python/awscli/versions/1.18/
         docker push "${IMAGE_NAME}"
 
-  awscli-2-1:
-    name: AWS CLI v2.1
-    if: github.event_name == 'push' && contains(github.ref, 'gh-awscli-v2.1.')
+  awscli-2-4:
+    name: AWS CLI v2.4
+    if: github.event_name == 'push' && contains(github.ref, 'gh-awscli-v2.4')
     runs-on: ubuntu-18.04
     env:
-      IMAGE_NAME: ghcr.io/supinf/awscli:2.1
+      IMAGE_NAME: ghcr.io/supinf/awscli:2.4
     steps:
     - uses: actions/checkout@v2
     - name: Build & Push
       run: |
         echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" python/awscli/versions/2.1/
+        docker build -t "${IMAGE_NAME}" python/awscli/versions/2.4/
         docker push "${IMAGE_NAME}"
 
   go-swagger:
