--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,3 +135,26 @@ jobs:
         echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
         docker build -t "${IMAGE_NAME}" golang/x-ray/versions/3.2/
         docker push "${IMAGE_NAME}"
+
+  swagger-codegen:
+    name: swagger-codegen
+    if: github.event_name == 'push' && contains(github.ref, 'gh-swagger-codegen-v3.0')
+    runs-on: ubuntu-18.04
+    env:
+      IMAGE_NAME: ghcr.io/supinf/swagger-codegen:3.0
+      TARGET_DIR: java/swagger-codegen/versions/3.0
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build & Push
+      working-directory: ${{ env.TARGET_DIR }}
+      run: |
+        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+        docker buildx build \
+          --platform=linux/amd64,linux/arm64 \
+          -f Dockerfile \
+          --push \
+          -t "${IMAGE_NAME}" \
+          .
