--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -193,7 +193,7 @@ jobs:
     - uses: actions/create-github-app-token@2986852ad836768dfea7781f31828eb3e17990fa #v1.6.2
       id: app-token
       with:
-        app-id: ${{ vars.APP_ID }}
+        app-id: ${{ secrets.APP_ID }}
         private-key: ${{ secrets.PRIVATE_KEY }}
     - name: Build & Push
       run: |
