--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
 permissions:
   contents: read
   packages: write
-  
+
 jobs:
   shellcheck:
     name: Shellcheck
@@ -199,8 +199,13 @@ jobs:
       with:
         app-id: ${{ secrets.APP_ID }}
         private-key: ${{ secrets.PRIVATE_KEY }}
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ steps.app-token.outputs.token }}
     - name: Build & Push
       run: |
-        echo ${{ steps.app-token.outputs.token }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
         docker build -t "${IMAGE_NAME}" cli-tools/postgres-backup/versions/9.6/
         docker push "${IMAGE_NAME}"
