--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,195 +3,124 @@ name: Publish Docker images
 on:
   push:
     tags:
-    - "*"
+      - "*"
 
 env:
-  DOCKER_BUILDKIT: 1
-  COMPOSE_DOCKER_CLI_BUILD: 1
+  REGISTRY: ghcr.io
+  REPOSITORY_OWNER: supinf
 
 jobs:
-  shellcheck:
-    name: Shellcheck
-    if: github.event_name == 'push' && contains(github.ref, 'gh-shellcheck-v0.7.')
+  build-and-push:
+    name: Build ${{ matrix.image_name }}:${{ matrix.image_tag }}
     runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/shellcheck:0.7
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" haskell/shellcheck/versions/0.x/
-        docker push "${IMAGE_NAME}"
 
-  hadolint:
-    name: hadolint
-    if: github.event_name == 'push' && contains(github.ref, 'gh-hadolint-v1.19.')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/hadolint:1.19
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" haskell/hadolint/versions/1.19/
-        docker push "${IMAGE_NAME}"
+    permissions:
+      contents: read
+      packages: write
 
-  awscli-1-18:
-    name: AWS CLI v1.18
-    if: github.event_name == 'push' && contains(github.ref, 'gh-awscli-v1.18.')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/awscli:1.18
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" python/awscli/versions/1.18/
-        docker push "${IMAGE_NAME}"
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image_name: vscode-devcontainer
+            image_tag: 202512
+            filter_ref: gh-devcontainer-202512
+            dockerfile_path: vscode-devcontainer/versions/go1.25-node24/
+            platforms: linux/amd64,linux/arm64
+          - image_name: shellcheck
+            image_tag: 0.7
+            filter_ref: gh-shellcheck
+            dockerfile_path: haskell/shellcheck/versions/0.x/
+          - image_name: hadolint
+            image_tag: 1.19
+            filter_ref: gh-hadolint
+            dockerfile_path: haskell/hadolint/versions/1.19/
+          - image_name: awscli
+            image_tag: 1.18
+            filter_ref: gh-awscli-v1.18
+            dockerfile_path: python/awscli/versions/1.18/
+          - image_name: awscli
+            image_tag: 2.4
+            filter_ref: gh-awscli-v2.4
+            dockerfile_path: python/awscli/versions/2.4/
+          - image_name: go-swagger
+            image_tag: 0.25
+            filter_ref: gh-go-swagger
+            dockerfile_path: golang/swagger/versions/0.x/
+          - image_name: hugo
+            image_tag: 0.79
+            filter_ref: gh-hugo
+            dockerfile_path: golang/hugo/versions/0.x/
+          - image_name: cfn-lint
+            image_tag: 0.58
+            filter_ref: gh-cfn-lint
+            dockerfile_path: python/cfn-lint/versions/0.58/
+          - image_name: test-http
+            image_tag: 1.2
+            filter_ref: gh-test-http
+            dockerfile_path: python/test-http/versions/1.2/
+          - image_name: x-ray
+            image_tag: 3.2
+            filter_ref: gh-x-ray
+            dockerfile_path: golang/x-ray/versions/3.2/
+          - image_name: swagger-codegen
+            image_tag: 3.0
+            filter_ref: gh-swagger-codegen-v3.0
+            dockerfile_path: java/swagger-codegen/versions/3.0
+            platforms: linux/amd64,linux/arm64
+          - image_name: swagger-codegen
+            image_tag: 2.4
+            filter_ref: gh-swagger-codegen-v2.4
+            dockerfile_path: java/swagger-codegen/versions/2.4
+            platforms: linux/amd64,linux/arm64
+          - image_name: postgres-backup
+            image_tag: 9.6
+            filter_ref: gh-postgres-backup
+            dockerfile_path: cli-tools/postgres-backup/versions/9.6/
 
-  awscli-2-4:
-    name: AWS CLI v2.4
-    if: github.event_name == 'push' && contains(github.ref, 'gh-awscli-v2.4')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/awscli:2.4
     steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" python/awscli/versions/2.4/
-        docker push "${IMAGE_NAME}"
+      - name: Checkout repository
+        if: contains(github.ref, matrix.filter_ref)
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
 
-  go-swagger:
-    name: go-swagger
-    if: github.event_name == 'push' && contains(github.ref, 'gh-go-swagger-v0.25.')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/go-swagger:0.25
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" golang/swagger/versions/0.x/
-        docker push "${IMAGE_NAME}"
+      # QEMU: arm64 ビルド用
+      - name: Set up QEMU
+        if: contains(github.ref, matrix.filter_ref) && matrix.platforms
+        uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3
 
-  hugo:
-    name: Hugo
-    if: github.event_name == 'push' && contains(github.ref, 'gh-hugo-v0.79.')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/hugo:0.79
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" golang/hugo/versions/0.x/
-        docker push "${IMAGE_NAME}"
+      - name: Set up Docker Buildx
+        if: contains(github.ref, matrix.filter_ref)
+        uses: docker/setup-buildx-action@d70bba72b1f3fd22344832f00baa16ece964efeb # v3
 
-  cfn-lint:
-    name: CFn Lint
-    if: github.event_name == 'push' && contains(github.ref, 'gh-cfn-lint-v0.58')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/cfn-lint:0.58
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" python/cfn-lint/versions/0.58/
-        docker push "${IMAGE_NAME}"
+      # Login: GITHUB_TOKEN を使用
+      - name: Log in to the Container registry
+        if: contains(github.ref, matrix.filter_ref)
+        uses: docker/login-action@0d4c9c5ea7693da7b068278f7b52bda2a190a446 # v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-  test-http:
-    name: Test HTTP requests
-    if: github.event_name == 'push' && contains(github.ref, 'gh-test-http-v1.2')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/test-http:1.2
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" python/test-http/versions/1.2/
-        docker push "${IMAGE_NAME}"
+      # タグ生成・ラベル付与
+      - name: Extract metadata (tags, labels) for Docker
+        if: contains(github.ref, matrix.filter_ref)
+        id: meta
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.REPOSITORY_OWNER }}/${{ matrix.image_name }}
+          tags: |
+            type=raw,value=${{ matrix.image_tag }}
+            type=sha,format=long
 
-  aws-x-ray:
-    name: Test HTTP requests
-    if: github.event_name == 'push' && contains(github.ref, 'gh-x-ray-3.2')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/x-ray:3.2
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" golang/x-ray/versions/3.2/
-        docker push "${IMAGE_NAME}"
-
-  swagger-codegen:
-    name: swagger-codegen
-    if: github.event_name == 'push' && contains(github.ref, 'gh-swagger-codegen-v3.0')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/swagger-codegen:3.0
-      TARGET_DIR: java/swagger-codegen/versions/3.0
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Build & Push
-      working-directory: ${{ env.TARGET_DIR }}
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker buildx build \
-          --platform=linux/amd64,linux/arm64 \
-          -f Dockerfile \
-          --push \
-          -t "${IMAGE_NAME}" \
-          .
-
-  swagger-codegen-2:
-    name: swagger-codegen
-    if: github.event_name == 'push' && contains(github.ref, 'gh-swagger-codegen-v2.4')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/swagger-codegen:2.4
-      TARGET_DIR: java/swagger-codegen/versions/2.4
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Build & Push
-      working-directory: ${{ env.TARGET_DIR }}
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker buildx build \
-          --platform=linux/amd64,linux/arm64 \
-          -f Dockerfile \
-          --push \
-          -t "${IMAGE_NAME}" \
-          .          
-
-  postgres-backup:
-    name: Postgres Backup
-    if: github.event_name == 'push' && contains(github.ref, 'gh-postgres-backup-v9.6')
-    runs-on: ubuntu-22.04
-    env:
-      IMAGE_NAME: ghcr.io/supinf/postgres-backup:9.6
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push
-      run: |
-        echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-        docker build -t "${IMAGE_NAME}" cli-tools/postgres-backup/versions/9.6/
-        docker push "${IMAGE_NAME}"
+      # Build & Push
+      - name: Build and push Docker image
+        if: contains(github.ref, matrix.filter_ref)
+        uses: docker/build-push-action@1a162644f9a7e87d8f4b053101d1d9a712edc18c # v6
+        with:
+          context: ${{ matrix.dockerfile_path }}
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: ${{ matrix.platforms }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
