--- a/vscode-devcontainer/versions/go1.25-node25/Dockerfile
+++ b/vscode-devcontainer/versions/go1.25-node25/Dockerfile
@@ -4,12 +4,15 @@
 # Global Arguments
 # ==============================================================================
 ARG GO_VERSION=1.25.5
-ARG UBUNTU_VERSION=24.04
+ARG DEBIAN_VERSION=trixie-20251208
+# ARG GO_VERSION=1.25.5-debian13
+# ARG DEBIAN_VERSION=trixie-debian13-fips
 
 # ==============================================================================
 # Stage 1: Go Tool Builder
 # ==============================================================================
 FROM golang:${GO_VERSION}-bookworm AS go-builder
+# FROM dhi.io/golang:${GO_VERSION}-dev AS go-builder
 
 ARG TARGETARCH
 
@@ -18,13 +21,15 @@ ENV CGO_ENABLED=0 \
     GOARCH=${TARGETARCH}
 
 ENV AIR_VERSION=v1.63.4 \
-    DELVE_VERSION=v1.25.2 \
+    DELVE_VERSION=v1.26.0 \
     MOCKGEN_VERSION=v0.6.0 \
     BUF_VERSION=v1.61.0 \
     PROTOC_GEN_GO_VERSION=v1.36.10 \
+    PROTOC_GEN_GO_GRPC_VERSION=v1.6.0 \
     PROTOC_GEN_CONNECT_GO_VERSION=v1.19.1 \
+    GRPC_GATEWAY_VERSION=v2.27.4 \
     OAPI_VERSION=v2.5.1 \
-    GOLANGCI_LINT_VERSION=v2.7.1
+    GOLANGCI_LINT_VERSION=v2.7.2
 
 RUN --mount=type=cache,target=/go/pkg/mod \
     --mount=type=cache,target=/root/.cache/go-build \
@@ -33,7 +38,10 @@ RUN --mount=type=cache,target=/go/pkg/mod \
     go install go.uber.org/mock/mockgen@${MOCKGEN_VERSION} && \
     go install github.com/bufbuild/buf/cmd/buf@${BUF_VERSION} && \
     go install google.golang.org/protobuf/cmd/protoc-gen-go@${PROTOC_GEN_GO_VERSION} && \
+    go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@${PROTOC_GEN_GO_GRPC_VERSION} && \
     go install connectrpc.com/connect/cmd/protoc-gen-connect-go@${PROTOC_GEN_CONNECT_GO_VERSION} && \
+    go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@${GRPC_GATEWAY_VERSION} && \
+    go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@${GRPC_GATEWAY_VERSION} && \
     go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@${OAPI_VERSION} && \
     go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@${GOLANGCI_LINT_VERSION} && \
     if [ -d "/go/bin/linux_${TARGETARCH}" ]; then \
@@ -44,7 +52,8 @@ RUN --mount=type=cache,target=/go/pkg/mod \
 # ==============================================================================
 # Stage 2: Development Environment
 # ==============================================================================
-FROM ubuntu:${UBUNTU_VERSION}
+FROM debian:${DEBIAN_VERSION}
+# FROM dhi.io/debian-base:${DEBIAN_VERSION}
 
 ARG TARGETARCH
 
@@ -58,19 +67,23 @@ RUN --mount=type=cache,target=/var/cache/apt/archives,id=apt-archives-${TARGETAR
     wget \
     unzip \
     ca-certificates \
-    openjdk-17-jdk-headless \
+    openjdk-25-jdk-headless \
     maven \
     jq \
     python3 \
     python3-pip \
     protobuf-compiler \
     libprotobuf-dev \
+    gnupg lsb-release \
+    locales \
+    && localedef -f UTF-8 -i ja_JP ja_JP.UTF-8 \
     && rm -rf /var/lib/apt/lists/*
 
 # ------------------------------------------------------------------------------
 # Flyway
 # ------------------------------------------------------------------------------
-ENV FLYWAY_VERSION=9.9.0
+ENV FLYWAY_VERSION=9.9.0 \
+    JAVA_ARGS="--enable-native-access=ALL-UNNAMED"
 
 RUN curl -L -o flyway.tar.gz https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/${FLYWAY_VERSION}/flyway-commandline-${FLYWAY_VERSION}-linux-x64.tar.gz \
     && tar -xzf flyway.tar.gz \
@@ -83,6 +96,7 @@ RUN curl -L -o flyway.tar.gz https://repo1.maven.org/maven2/org/flywaydb/flyway-
 # OpenAPI Generator CLI
 # ------------------------------------------------------------------------------
 ENV OPENAPI_GENERATOR_VERSION=7.17.0
+
 RUN curl -fsSL https://raw.githubusercontent.com/OpenAPITools/openapi-generator/"v${OPENAPI_GENERATOR_VERSION}"/bin/utils/openapi-generator-cli.sh -o /usr/local/bin/openapi-generator-cli \
     && chmod +x /usr/local/bin/openapi-generator-cli
 
@@ -95,15 +109,37 @@ ENV PATH=/root/.local/bin:$PATH
 # ------------------------------------------------------------------------------
 # Node.js Tools (pnpm, rulesync など)
 # ------------------------------------------------------------------------------
+ENV NPM_VERSION=11.7.0 \
+    PNPM_VERSION=10.26.2 \
+    RULESYNC_VERSION=4.3.1 \
+    CONTEXT7_VERSION=2.0.0
+
 RUN curl -fsSL https://deb.nodesource.com/setup_current.x | bash - \
     && apt-get install -y nodejs
 
 RUN --mount=type=cache,target=/root/.npm \
-    npm install -g npm@latest --force && \
-    npm install -g pnpm && \
-    npm install -g rulesync && \
-    npm install -g @upstash/context7-mcp && \
+    npm install -g "npm@${NPM_VERSION}" --force && \
+    npm install -g "pnpm@${PNPM_VERSION}" && \
+    npm install -g "rulesync@${RULESYNC_VERSION}" && \
+    npm install -g "@upstash/context7-mcp@${CONTEXT7_VERSION}" && \
     npm cache clean --force
+
+# ------------------------------------------------------------------------------
+# Docker
+# ------------------------------------------------------------------------------
+RUN for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do apt-get remove -y $pkg; done \
+    && apt autoremove -y
+RUN install -m 0755 -d /etc/apt/keyrings \
+    && curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc \
+    && chmod a+r /etc/apt/keyrings/docker.asc \
+    && printf "Types: deb\n\
+URIs: https://download.docker.com/linux/debian\n\
+Suites: %s\n\
+Components: stable\n\
+Signed-By: /etc/apt/keyrings/docker.asc\n" "$(. /etc/os-release && echo "$VERSION_CODENAME")" > /etc/apt/sources.list.d/docker.sources \
+    && apt-get update \
+    && apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin \
+    && rm -rf /var/lib/apt/lists/*
 
 # ------------------------------------------------------------------------------
 # AWS CLI v2
@@ -134,8 +170,10 @@ ENV CLAUDE_CODE_USE_BEDROCK=false \
 # ------------------------------------------------------------------------------
 ENV GOOGLE_CLOUD_LOCATION=global \
     GOOGLE_GENAI_USE_VERTEXAI=true \
-    GEMINI_MODEL="gemini-2.5-flash"
-RUN npm install -g @google/gemini-cli
+    GEMINI_MODEL="gemini-3-flash-preview" \
+    GEMINI_CLI_VERSION=0.22.5
+
+RUN npm install -g "@google/gemini-cli@${GEMINI_CLI_VERSION}"
 
 # ------------------------------------------------------------------------------
 # Go
